5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1573_1332.log
== TEST (2019-03-11 15:36:50) 
-- CODE:
aresta =5
area = 3/2 3**(1/2)a**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2 3**(1/2)a**2
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:37:08) 
-- CODE:
aresta =5
area = 3/2, 3**(1/2),a**2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2, 3**(1/2),a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:37:43) 
-- CODE:
aresta =5
area = 3/2, 3**1/2, a**2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2, 3**1/2, a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:37:50) 
-- CODE:
aresta =5
area = 3/2 3**1/2 a**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2 3**1/2 a**2
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:40:21) 
-- CODE:
aresta =5
area =3/2(3 ** 1/2)a**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area =3/2(3 ** 1/2)a**2
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:40:27) 
-- CODE:
aresta =5
area =3/2(3 ** 1/2)a ** 2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area =3/2(3 ** 1/2)a ** 2
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:40:50) 
-- CODE:
aresta =5
area =3/2(3**1/2)a**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area =3/2(3**1/2)a**2
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:41:21) 
-- CODE:
aresta =5
area =3/2*(3**1/2)*a**2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2*(3**1/2)*a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:43:02) 
-- CODE:
aresta =5
area =3/2*(3**0.5)*a**2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2*(3**0.5)*a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:43:58) 
-- CODE:
aresta =5
area =3/2*(3**1/2)*a**2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2*(3**1/2)*a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:44:07) 
-- CODE:
aresta =5
area =3/2(3**1/2)a**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area =3/2(3**1/2)a**2
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:44:15) 
-- CODE:
aresta =5
area =3/2*(3**1/2)*a**2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2*(3**1/2)*a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:44:27) 
-- CODE:
aresta =5
area =3/2*(3**1/2)*5**2
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:44:31) 
-- CODE:
aresta =5
area =3/2*(3**1/2)*5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.121397
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:45:08) 
-- CODE:
aresta =5
area =3/2*(3**1/2)*(5**2)
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:45:10) 
-- CODE:
aresta =5
area =3/2*(3**1/2)*(5**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.130214
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:45:12) 
-- CODE:
aresta =5
area =3/2*(3**1/2)*(5**2)
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:45:54) 
-- CODE:
aresta =5
area =3/2*(3**0.5)*(5**2)
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:45:56) 
-- CODE:
aresta =5
area =3/2*(3**0.5)*(5**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.13922
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
